# extrinsic_calibration

./: CMakeLists.txt  README.md  README.txt  package.xml
include/calibration_cameras/: calibrator.hpp  pose_estimation.hpp
include/extrinsic_calibration/: calibrator.hpp
launch/: calibration_cameras_pepper.launch  extrinsic_calibration_pepper.launch  register_depth.launch
src/: calibrator.cpp  main.cpp  pose_estimation.cpp
