<?xml version="1.0"?>
<package>
  <name>extrinsic_calibration</name>
  <version>0.0.0</version>
  <description>Extrinsic calibration for Pepper robot with its color and depth cameras</description>
  <author email="natalia.lyubova@gmail.com">Natalia Lyubova</author>
  <author email="mylodlakseni@gmail.com">Oksana Hagen</author>
  <maintainer email="natalia.lyubova@gmail.com">Natalia Lyubova</maintainer>
  <maintainer email="mylodlakseni@gmail.com">Oksana Hagen</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>tf</build_depend>
  <!-- <build_depend>opencv_candidate</build_depend> -->

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>tf</run_depend>
  <!-- <run_depend>opencv_candidate</run_depend> -->
</package>
